@@ -3,6 +3,17 @@ NitrOS-9 V3.2.9:
 ----------------------------------------------------------
 2013/01/09 David Ladd
 M ChangeLog
+M 3rdparty/packages/fsim2/makefile
+M 3rdparty/packages/kyumgai/makefile
+M 3rdparty/packages/sierra/policequest1/makefile
+M 3rdparty/packages/sierra/spacequest0/makefile
+
+Changed makefile(s) for fsim2, kyumgai, policequest1, and spacequest0
+so that becker boot disks for use with drivewire4 are created.
+
+----------------------------------------------------------
+2013/01/09 David Ladd
+M ChangeLog
 M 3rdparty/packages/sierra/kingsquest2/makefile
 M 3rdparty/packages/sierra/kingsquest3/makefile
 M 3rdparty/packages/sierra/kingsquest4/makefile
